# NRS-FC

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  Makefile  NRS-Flight-Computer.ioc  README.md  gcc-arm-none-eabi.cmake
AZURE_RTOS/App/: app_azure_rtos.c  app_azure_rtos_config.h
Changes/: mx_config changes.md
Core/Inc/: RTE_Components.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: adc.c  app_threadx.c  can.c  dma.c  eth.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
Project/: LedOne.cpp  LedOne.hpp  LedTwo.cpp  LedTwo.hpp  NRS-FC-BoardDefinitions.hpp  SensorTask.cpp  SensorTask.hpp
